# oomori-engine-2d

./: .gitignore  CMakeLists.txt  README.md  wiki.txt
res/shaders/: fragment.txt  vertex.txt
src/: main.cpp  test.cpp
src/Renderer/: ShaderProgram.cpp  ShaderProgram.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  stb_image.h
